Refactor stack trace access to standardize fetching method handles